--- a/Flask/Flask Dev - Dep/templates/index.html
+++ b/Flask/Flask Dev - Dep/templates/index.html
@@ -10,148 +10,178 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+    <style>
+      body {
+        background-color: #f8f9fa;
+      }
+      .navbar {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+      .card {
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+      .btn-outline-dark:hover {
+        background-color: #343a40;
+        color: #fff;
+      }
+      .btn-outline-success:hover {
+        background-color: #4d5ad4;
+        color: #fff;
+      }
+      .table th, .table td {
+        vertical-align: middle;
+      }
+      .alert-info {
+        border-radius: 8px;
+      }
+      * {
+         box-sizing: border-box;
+         }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">My To-Do</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            
-        </ul>
-    </nav>
-    <br>
+    {% extends 'base.html' %}
+    {% block title %}   Home   {% endblock title %}
+    {% block body %}
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+          <a class="navbar-brand fw-bold" href="/">My To-Do</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">All Tasks</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Filter
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Pending</a></li>
+                  <li><a class="dropdown-item" href="#">Completed</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li><a class="dropdown-item" href="#">All Tasks</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-    <div class="container-fluid">
-        <form class="d-flex container" role="search">
+      <div class="container my-4">
+        <div class="card p-4 mb-4">
+          <h2 class="mb-4">Search Tasks</h2>
+          <form class="d-flex" role="search">
             <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
+              class="form-control me-2"
+              type="search"
+              placeholder="Search tasks..."
+              aria-label="Search"
             />
             <button class="btn btn-outline-success" type="submit">
-                Search
+              Search
             </button>
-        </form>
-    </div>
-    <br>
-    
-       
-    
-<form class="container" action="/", method="post">
-    <h2>Add To Do</h2>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">To'do Title</label>
-    <input type="text" class="form-control" name="title" id="exampleInputEmail1" aria-describedby="emailHelp">
-    
-  </div>
-  <div class="mb-3">
-    <label for="desc" class="form-label">To'do Discription</label>
-    <input type="text" name="desc" class="form-control" id="desc">
-  </div>
-  
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+          </form>
+        </div>
 
-<br><br>
+        <div class="card p-4 mb-4">
+          <h2 class="mb-4">Add To-Do</h2>
+          <form action="/" method="post">
+            <div class="mb-3">
+              <label for="title" class="form-label">To-Do Title</label>
+              <input
+                type="text"
+                class="form-control"
+                name="title"
+                id="title"
+                aria-describedby="titleHelp"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="desc" class="form-label">To-Do Description</label>
+              <textarea
+                name="desc"
+                class="form-control"
+                id="desc"
+                rows="4"
+              ></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Add Task</button>
+          </form>
+        </div>
 
-
-<div class="container">
-<h2>Your To'Do</h2>
-
- {% if allTodo|length == 0 %}
- <div class="alert alert-dark" role="alert">
-                    No Todos found. Add your first todo now!
-                  </div>
-   {% else %} 
-    <table class="table">
-        <thead>
-            <tr>
+        <div class="card p-4">
+          <h2 class="mb-4">Your To-Dos</h2>
+          {% if allTodo|length == 0 %}
+          <div class="alert alert-info" role="alert">
+            No tasks found. Add your first to-do above!
+          </div>
+          {% else %}
+          <table class="table table-hover">
+            <thead>
+              <tr>
                 <th scope="col">#</th>
                 <th scope="col">Title</th>
                 <th scope="col">Description</th>
-                <th scope="col">Time</th>
+                <th scope="col">Created</th>
                 <th scope="col">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
+              </tr>
+            </thead>
+            <tbody>
+              {% for todo in allTodo %}
+              <tr>
+                <th scope="row">{{ loop.index }}</th>
+                <td>{{ todo.title }}</td>
+                <td>{{ todo.desc }}</td>
+                <td>{{ todo.date_created }}</td>
+                <td>
+                  <a
+                    href="/update/{{todo.sno}}"
+                    type="button"
+                    class="btn btn-outline-dark btn-sm mx-1"
+                    >Task</a
+                  >
+                  <a
+                    href="/delete/{{todo.sno}}"
+                    type="button"
+                    class="btn btn-outline-success btn-sm mx-1"
+                    >Done!</a
+                  >
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          {% endif %}
+        </div>
+      </div>
 
-       
-          
-          {% for todo in allTodo %}
-          <tr>
-            <th scope="row">{{ loop.index }}</th>
-            <td>{{ todo.title }}</td>
-            <td>{{ todo.desc }}</td>
-            <td>{{ todo.date_created }}</td>
-            <div>
-              
-              <td>
-                <a href="/update/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Task</a>
-                <a href="/delete/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Success</a>   
-                  
-              </td>
-              
-                </tr>
-              </tbody>
-            </table>
-
-            {% endfor %}
-            {% endif %}
-
-            
-</div>
-    
-
-
-
-
-
-
-
-
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"
+      ></script>
+    {% endblock body %}
   </body>
 </html>
