do some updation things

--- a/Flask/Flask Dev - Dep/templates/index.html
+++ b/Flask/Flask Dev - Dep/templates/index.html
@@ -132,7 +132,7 @@
         </div>
 
         <div class="card p-4">
-          <h2 class="mb-4">Your To-Dos</h2>
+          <h2 class="mb-4">Your To-Do's</h2>
           {% if allTodo|length == 0 %}
           <div class="alert alert-info" role="alert">
             No tasks found. Add your first to-do above!
